--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ hyper = { version = "1.1.0", features = ["full"] }
 http-body-util = "0.1.0"
 hyper-util = { version = "0.1.3", features = ["full"] }
 tower-cookies = "0.10.0"
+deadpool-redis = "0.13.0"
+redis = { version = "0.23.3", features = ["tokio-native-tls-comp"] }
