--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ hyper-util = { version = "0.1.3", features = ["full"] }
 tower-cookies = "0.10.0"
 deadpool-redis = "0.13.0"
 redis = { version = "0.23.3", features = ["tokio-native-tls-comp"] }
+axum-test = "14.3.0"
+serde_json = "1.0.114"
